@@ -35,6 +35,7 @@
 * Improved calculator speed by using macros instead of std::pow.
 * Added missing header include for assert().
 * Fixed wrong acceleration calculation.
+* Added many sphere tests to Benchmark.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
